# agos

./: .gitignore  README.md  SECURITY.md  config.py  layer1_EPHE_data.csv  layer1_data.py  layer2_ann.py  layer2_anomalies.csv  layer3_llm.py  layer3_llm_analysis.csv  layer4_engine.py  layer4_trade_log.csv  pse_scraper.py  requirements.txt
.github/workflows/: main_agos-backend.yml  main_agos-engine.yml
backend/: .env.example  README.md  requirements.txt
backend/app/: main.py
backend/tests/: test_agent_graph.py  test_agent_middleware.py  test_agent_routes.py  test_agent_service.py  test_agent_streaming.py  test_agent_structured_output.py  test_data_routes.py  test_map_service.py  test_market_routes.py  test_performance_paths.py  test_portfolio_routes.py
cron/: .env.example  .gitignore  README.md  base_scraper.py  bsp_scraper.py  config.py  db.py  logger.py  main.py  map_reference_data.py  news_scraper.py  psa_scraper.py  pse_scraper.py  pyproject.toml  requirements.txt  seed_map_reference_data.py  verify_results.py
cron/tests/: conftest.py  test_base_scraper.py  test_db.py  test_news_scraper.py
engine/: .env.example  README.md  app.py  benchmark.py  layer2_ann.py  layer3_llm.py  layer4_engine.py  requirements.txt
frontend/: .gitignore  README.md  backend_openapi.json  components.json  engine_openapi.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
research/: MODEL_CARD.md  README.md  preprocess_data.py  pse_scraper.py  requirements.txt  split_data.py  test_inference.py  train.ipynb  train_chronos2.py  visualize.py
(+117 files in other folders)
